cabal-version:       >=1.10
name:                kospi-parser
version:             0.1.0.0
synopsis:            Parses Kospi PCAP packets
homepage:            https://github.com/kwannoel/kospi-parser
license:             BSD3
license-file:        LICENSE
author:              Kwan Noel
maintainer:          noelkwan1998@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable kospi-parser
  main-is:             Main.hs
  build-depends:       base               >=4.13 && <4.14
                     , attoparsec         >= 0.13.2 && < 0.14
                     , bytestring         >= 0.10.10 && < 0.11
                     , pcap               >= 0.4.5 && < 0.5
                     , time               >= 1.9.3 && < 1.10
  default-language:    Haskell2010
